Fixed overflow at magnific popup

--- a/assets/css/magnific-popup.css
+++ b/assets/css/magnific-popup.css
@@ -58,7 +58,9 @@
 .mfp-zoom-out-cur, .mfp-zoom-out-cur .mfp-image-holder .mfp-close {
   cursor: -moz-zoom-out;
   cursor: -webkit-zoom-out;
-  cursor: zoom-out; }
+  cursor: zoom-out; 
+  overflow: hidden;
+}
 
 .mfp-zoom {
   cursor: pointer;
@@ -250,7 +252,8 @@ img.mfp-img {
   line-height: 0;
   box-sizing: border-box;
   padding: 40px 0 40px;
-  margin: 0 auto; }
+  margin: 0 auto; 
+}
 
 /* The shadow behind the image */
 .mfp-figure {
@@ -297,21 +300,25 @@ img.mfp-img {
 .mfp-gallery .mfp-image-holder .mfp-figure {
   cursor: pointer; }
 
-@media screen and (max-width: 800px) and (orientation: landscape), screen and (max-height: 300px) {
+@media screen and (max-width: 768px) and (orientation: landscape), screen and (max-height: 300px) {
   /**
        * Remove all paddings around the image on small screen
        */
   .mfp-img-mobile .mfp-image-holder {
     padding-left: 0;
-    padding-right: 0; }
+    padding-right: 0; 
+  }
   .mfp-img-mobile img.mfp-img {
-    padding: 0; }
+    padding: 0; 
+  }
   .mfp-img-mobile .mfp-figure:after {
     top: 0;
-    bottom: 0; }
+    bottom: 0; 
+  }
   .mfp-img-mobile .mfp-figure small {
     display: inline;
-    margin-left: 5px; }
+    margin-left: 5px; 
+  }
   .mfp-img-mobile .mfp-bottom-bar {
     background: rgba(0, 0, 0, 0.6);
     bottom: 0;
@@ -319,12 +326,15 @@ img.mfp-img {
     top: auto;
     padding: 3px 5px;
     position: fixed;
-    box-sizing: border-box; }
+    box-sizing: border-box; 
+  }
     .mfp-img-mobile .mfp-bottom-bar:empty {
-      padding: 0; }
+      padding: 0; 
+    }
   .mfp-img-mobile .mfp-counter {
     right: 5px;
-    top: 3px; }
+    top: 3px; 
+  }
   .mfp-img-mobile .mfp-close {
     top: 0;
     right: 0;
@@ -334,18 +344,27 @@ img.mfp-img {
     background: rgba(0, 0, 0, 0.6);
     position: fixed;
     text-align: center;
-    padding: 0; } }
+    padding: 0; 
+  } 
+  
+  }
 
-@media all and (max-width: 900px) {
-  .mfp-arrow {
-    -webkit-transform: scale(0.75);
-    transform: scale(0.75); }
-  .mfp-arrow-left {
-    -webkit-transform-origin: 0;
-    transform-origin: 0; }
-  .mfp-arrow-right {
-    -webkit-transform-origin: 100%;
-    transform-origin: 100%; }
-  .mfp-container {
-    padding-left: 6px;
-    padding-right: 6px; } }
+@media all and (max-width: 768px) {
+    .mfp-arrow {
+      -webkit-transform: scale(0.75);
+      transform: scale(0.75); 
+    }
+    .mfp-arrow-left {
+      -webkit-transform-origin: 0;
+      transform-origin: 0; 
+    }
+    .mfp-arrow-right {
+      -webkit-transform-origin: 100%;
+      transform-origin: 100%; 
+    }
+    .mfp-container {
+      padding-left: 6px;
+      padding-right: 6px;
+    }
+
+  }
