--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4030,9 +4030,14 @@ input, select, textarea {
 		.prof-txt {
 			margin-left: 20px;
 			font-size: 20px;
-			font-family: Courier;
 			color: #fae7db;
 			vertical-align: middle;
+		}
+
+		@media screen and (max-width: 768px) {
+			.prof-txt {
+				font-size: 18px;
+			}			
 		}
 
 		p.justify_text {
